--- a/_posts/2023-04-27-semantic.md
+++ b/_posts/2023-04-27-semantic.md
@@ -6,7 +6,7 @@ date: 2023-04-27 00:00:00 -04
 permalink: "/semantic/"
 location: "arXiv:2304.14392"
 ordinal: 6
-preview: "Z M. Rossi, I L. Chuang"
+preview: "Z. M. Rossi, I. L. Chuang"
 pdflink: "https://arxiv.org/abs/2304.14392"
 tag: highlight
 ---
