--- a/_posts/2023-04-27-cvqsp.md
+++ b/_posts/2023-04-27-cvqsp.md
@@ -8,6 +8,6 @@ location: "arXiv:2304.14383"
 ordinal: 5
 preview: "Z M. Rossi, V M. Bastidas, W J. Munro, I L. Chuang"
 pdflink: "https://arxiv.org/abs/2304.14383"
-tag: highlight
+tag:
 ---
-[\[PDF\]](https://arxiv.org/abs/2304.14383)
+[\[PDF\]](https://arxiv.org/pdf/2304.14383)
