--- a/_posts/2024-09-27-parallel.md
+++ b/_posts/2024-09-27-parallel.md
@@ -10,4 +10,4 @@ pdflink: "https://arxiv.org/abs/2409.19043"
 preview: "J. M. Martyn, Z. M. Rossi, K. Z. Cheng, Y. Liu, I. L. Chuang"
 tag: highlight
 ---
-[\[PDF\]](https://arxiv.org/abs/2409.19043)
+[\[PDF\]](https://arxiv.org/pdf/2409.19043)
