--- a/_posts/2022-03-02-channel.md
+++ b/_posts/2022-03-02-channel.md
@@ -9,4 +9,4 @@ ordinal: 3
 pdflink: "https://arxiv.org/abs/2105.08707"
 preview: "Z M. Rossi, J Yu, I L. Chuang, S Sugiura"
 ---
-[\[PDF\]](https://arxiv.org/abs/2105.08707)
+[\[PDF\]](https://arxiv.org/pdf/2105.08707)
