--- a/_posts/2023-04-27-semantic.md
+++ b/_posts/2023-04-27-semantic.md
@@ -8,6 +8,6 @@ location: "arXiv:2304.14392"
 ordinal: 6
 preview: "Z. M. Rossi, I. L. Chuang"
 pdflink: "https://arxiv.org/abs/2304.14392"
-tag: highlight
+tag:
 ---
-[\[PDF\]](https://arxiv.org/abs/2304.14392)
+[\[PDF\]](https://arxiv.org/pdf/2304.14392)
