--- a/_posts/2023-09-08-ising.md
+++ b/_posts/2023-09-08-ising.md
@@ -9,4 +9,4 @@ ordinal: 7
 preview: "V. M. Bastidas, S. Zeytinoğlu, Z. M. Rossi, I. L. Chuang, W. J. Munro"
 pdflink: "https://arxiv.org/abs/2309.04538"
 ---
-[\[PDF\]](https://arxiv.org/abs/2309.04538)
+[\[PDF\]](https://arxiv.org/pdf/2309.04538)
