Updated formatting and information; allows light/dark mode toggle.

--- a/_posts/2023-04-27-cvqsp.md
+++ b/_posts/2023-04-27-cvqsp.md
@@ -7,7 +7,8 @@ permalink: "/cvqsp/"
 location: "arXiv:2304.14383"
 ordinal: 5
 preview: "Z M. Rossi, V M. Bastidas, W J. Munro, I L. Chuang"
-pdflink: "https://arxiv.org/abs/2304.14383"
+pdflink: "https://arxiv.org/pdf/2304.14383"
+abslink: ""
 tag:
 ---
 [\[PDF\]](https://arxiv.org/pdf/2304.14383)
