--- a/_posts/2023-04-27-semantic.md
+++ b/_posts/2023-04-27-semantic.md
@@ -7,7 +7,8 @@ permalink: "/semantic/"
 location: "arXiv:2304.14392"
 ordinal: 6
 preview: "Z. M. Rossi, I. L. Chuang"
-pdflink: "https://arxiv.org/abs/2304.14392"
+pdflink: "https://arxiv.org/pdf/2304.14392"
+abslink: ""
 tag:
 ---
 [\[PDF\]](https://arxiv.org/pdf/2304.14392)
