--- a/_posts/2023-09-08-ising.md
+++ b/_posts/2023-09-08-ising.md
@@ -7,6 +7,7 @@ permalink: "/ising/"
 location: "PRB"
 ordinal: 7
 preview: "V. M. Bastidas, S. Zeytinoğlu, Z. M. Rossi, I. L. Chuang, W. J. Munro"
-pdflink: "https://arxiv.org/abs/2309.04538"
+pdflink: "https://arxiv.org/pdf/2309.04538"
+abslink: ""
 ---
 [\[PDF\]](https://arxiv.org/pdf/2309.04538)
