--- a/_posts/2023-09-28-modular.md
+++ b/_posts/2023-09-28-modular.md
@@ -7,6 +7,7 @@ permalink: "/modular/"
 location: "arxiv:2309.16665"
 ordinal: 8
 preview: "Z. M. Rossi, J. L. Ceroni, I. L. Chuang"
-pdflink: "https://arxiv.org/abs/2309.16665"
+pdflink: "https://arxiv.org/pdf/2309.16665"
+abslink: ""
 ---
 [\[PDF\]](https://arxiv.org/pdf/2309.16665)
