--- a/_posts/2024-09-27-parallel.md
+++ b/_posts/2024-09-27-parallel.md
@@ -6,7 +6,8 @@ date: 2024-09-27 00:00:00 -04
 permalink: "/parallel/"
 location: "arXiv:2409.19043"
 ordinal: 9
-pdflink: "https://arxiv.org/abs/2409.19043"
+pdflink: "https://arxiv.org/pdf/2409.19043"
+abslink: ""
 preview: "J. M. Martyn, Z. M. Rossi, K. Z. Cheng, Y. Liu, I. L. Chuang"
 tag: highlight
 ---
