--- a/_posts/2025-05-08-skt-qsp.md
+++ b/_posts/2025-05-08-skt-qsp.md
@@ -6,8 +6,9 @@ date: 2025-05-08 00:00:00 -04
 permalink: "/skt-qsp/"
 location: "arXiv:2505.05468"
 ordinal: 11
-pdflink: "https://arxiv.org/abs/2505.05468"
-preview: "Zane M. Rossi"
+pdflink: "https://arxiv.org/pdf/2505.05468"
+abslink: ""
+preview: "Z. M. Rossi"
 tag: highlight
 ---
 [\[PDF\]](https://arxiv.org/pdf/2505.05468)
