--- a/_posts/2022-03-02-channel.md
+++ b/_posts/2022-03-02-channel.md
@@ -6,7 +6,8 @@ date: 2022-03-02 00:00:00 -04
 permalink: "/channel/"
 location: "PRA"
 ordinal: 3
-pdflink: "https://arxiv.org/abs/2105.08707"
-preview: "Z M. Rossi, J Yu, I L. Chuang, S Sugiura"
+pdflink: "https://arxiv.org/pdf/2105.08707"
+abslink: ""
+preview: "Z. M. Rossi, J. Yu, I. L. Chuang, S. Sugiura"
 ---
 [\[PDF\]](https://arxiv.org/pdf/2105.08707)
