--- a/_posts/2022-09-20-mqsp.md
+++ b/_posts/2022-09-20-mqsp.md
@@ -7,6 +7,7 @@ permalink: "/mqsp/"
 location: "Quantum Journal"
 ordinal: 4
 pdflink: "https://quantum-journal.org/papers/q-2022-09-20-811/"
-preview: "Z M. Rossi, I L. Chuang"
+abslink: ""
+preview: "Z. M. Rossi, I. L. Chuang"
 ---
 [\[PDF\]](https://quantum-journal.org/papers/q-2022-09-20-811/)
