--- a/_posts/2022-03-02-channel.md
+++ b/_posts/2022-03-02-channel.md
@@ -7,7 +7,7 @@ permalink: "/channel/"
 location: "PRA"
 ordinal: 3
 pdflink: "https://arxiv.org/pdf/2105.08707"
-abslink: ""
+abslink: "https://doi.org/10.1103/PhysRevA.105.032401"
 preview: "Z. M. Rossi, J. Yu, I. L. Chuang, S. Sugiura"
 ---
 [\[PDF\]](https://arxiv.org/pdf/2105.08707)
