--- a/_posts/2022-09-20-mqsp.md
+++ b/_posts/2022-09-20-mqsp.md
@@ -6,8 +6,8 @@ date: 2022-09-20 00:00:00 -04
 permalink: "/mqsp/"
 location: "Quantum Journal"
 ordinal: 4
-pdflink: "https://quantum-journal.org/papers/q-2022-09-20-811/"
-abslink: ""
+pdflink: "https://arxiv.org/pdf/2205.06261"
+abslink: "https://doi.org/10.22331/q-2022-09-20-811"
 preview: "Z. M. Rossi, I. L. Chuang"
 ---
 [\[PDF\]](https://quantum-journal.org/papers/q-2022-09-20-811/)
