--- a/_posts/2023-04-27-semantic.md
+++ b/_posts/2023-04-27-semantic.md
@@ -4,11 +4,11 @@ title: "Semantic embedding for quantum algorithms"
 sub-title: ""
 date: 2023-04-27 00:00:00 -04
 permalink: "/semantic/"
-location: "arXiv:2304.14392"
+location: "JMP"
 ordinal: 6
 preview: "Z. M. Rossi, I. L. Chuang"
 pdflink: "https://arxiv.org/pdf/2304.14392"
-abslink: ""
+abslink: "https://doi.org/10.1063/5.0160910"
 tag:
 ---
 [\[PDF\]](https://arxiv.org/pdf/2304.14392)
