--- a/_posts/2023-09-08-ising.md
+++ b/_posts/2023-09-08-ising.md
@@ -8,6 +8,6 @@ location: "PRB"
 ordinal: 7
 preview: "V. M. Bastidas, S. Zeytinoğlu, Z. M. Rossi, I. L. Chuang, W. J. Munro"
 pdflink: "https://arxiv.org/pdf/2309.04538"
-abslink: ""
+abslink: "https://doi.org/10.1103/PhysRevB.109.014306"
 ---
 [\[PDF\]](https://arxiv.org/pdf/2309.04538)
