--- a/_posts/2024-09-27-parallel.md
+++ b/_posts/2024-09-27-parallel.md
@@ -4,10 +4,10 @@ title: "Parallel Quantum Signal Processing Via Polynomial Factorization"
 sub-title: ""
 date: 2024-09-27 00:00:00 -04
 permalink: "/parallel/"
-location: "arXiv:2409.19043"
+location: "Quantum Journal"
 ordinal: 9
 pdflink: "https://arxiv.org/pdf/2409.19043"
-abslink: ""
+abslink: "https://doi.org/10.22331/q-2025-08-27-1834"
 preview: "J. M. Martyn, Z. M. Rossi, K. Z. Cheng, Y. Liu, I. L. Chuang"
 tag: highlight
 ---
