--- a/_posts/2023-09-28-modular.md
+++ b/_posts/2023-09-28-modular.md
@@ -4,10 +4,10 @@ title: "Modular quantum signal processing in many variables"
 sub-title: ""
 date: 2023-09-28 00:00:00 -04
 permalink: "/modular/"
-location: "arxiv:2309.16665"
+location: "Quantum Journal"
 ordinal: 8
 preview: "Z. M. Rossi, J. L. Ceroni, I. L. Chuang"
 pdflink: "https://arxiv.org/pdf/2309.16665"
-abslink: ""
+abslink: "https://doi.org/10.22331/q-2025-06-18-1776"
 ---
 [\[PDF\]](https://arxiv.org/pdf/2309.16665)
