--- a/_posts/2023-09-28-modular.md
+++ b/_posts/2023-09-28-modular.md
@@ -9,5 +9,7 @@ ordinal: 8
 preview: "Z. M. Rossi, J. L. Ceroni, I. L. Chuang"
 pdflink: "https://arxiv.org/pdf/2309.16665"
 abslink: "https://doi.org/10.22331/q-2025-06-18-1776"
+vidlink: "https://www.youtube.com/watch?v=gASfBYuHWxs"
+tag: highlight
 ---
 [\[PDF\]](https://arxiv.org/pdf/2309.16665)
